--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-"Hello World" 
+<!DOCTYPE html>
+
+<html>
+    <head>
+        <meta charset="UTF-8"/>
+        <title>Home Page</title>
+    </head>
+
+    <body>
+        Lista de Cursos</br>
+        Detalhe de Curso</br>
+        Disciplina</br>
+        Notícias
+    </body>
+</html>
