--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     </head>
 
     <body>
-        Lista de Cursos</br>
-        Detalhe de Curso</br>
-        Disciplina</br>
-        Notícias
+        <a href="listacursos.html">Lista de Cursos</a><br>
+        <a href="detalhecurso.html">Detalhe de Curso</a><br>
+        <a href="disciplina.html">Disciplina</a><br>
+        <a href="noticias.html">Notícias</a>
     </body>
 </html>
