--- a/listacursos.html
+++ b/listacursos.html
@@ -8,7 +8,7 @@
 
     <body>
         <a href="index.html">Home Page</a><br>
-        <a href="detalhecurso.html">Detalhe de Curso</a>
+        <a href="detalhecurso.html">Detalhe de Curso</a><br>
         <a href="disciplina.html">Disciplina</a><br>
         <a href="noticias.html">Notícias</a>
     </body>
