--- a/noticias.html
+++ b/noticias.html
@@ -8,8 +8,8 @@
 
     <body>
         <a href="index.html">Home Page</a><br>
-        <a href="detalhecurso.html">Detalhe de Curso</a>
+        <a href="detalhecurso.html">Detalhe de Curso</a><br>
         <a href="listacursos.html">Lista de Cursos</a><br>
-        <a href="disciplina.html">Disciplina</a><br>
+        <a href="disciplina.html">Disciplina</a>
     </body>
 </html>
