--- a/index.html
+++ b/index.html
@@ -4,12 +4,33 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Home Page</title>
+s
+        <link rel="stylesheet" type="text/css" href="padrao.css">
+
+        <img class="logo" src="images/logo-new.png">
     </head>
 
     <body>
+            <nav id="menu">
+                    <ul>
+                        <li><a href="">Home Page</a></li>
+                        <li><a href="listacursos.html">Lista de Cursos</a></li>
+                        <li><a href="detalhecurso.html">Detalhe de Curso</a></li>
+                        <li><a href="disciplina.html">Disciplina</a></li>
+                        <li><a href="noticias.html">Notícias</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>
+
+                    <div class="corpo">
+                        Conteúdo
+                    </div>
+                </nav>
+
+        <!--    
         <a href="listacursos.html">Lista de Cursos</a><br>
         <a href="detalhecurso.html">Detalhe de Curso</a><br>
         <a href="disciplina.html">Disciplina</a><br>
         <a href="noticias.html">Notícias</a>
+    -->
     </body>
 </html>
