--- a/index.html
+++ b/index.html
@@ -33,4 +33,8 @@ s
         <a href="noticias.html">Notícias</a>
     -->
     </body>
+
+    <footer>
+        <a href="https://www.impacta.edu.br/">Faculdade Impacta Tecnologia</a>
+    </footer>
 </html>
