--- a/noticias.html
+++ b/noticias.html
@@ -4,12 +4,23 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Notícias</title>
+        <link rel="stylesheet" type="text/css" href="padrao.css">
     </head>
 
     <body>
-        <a href="index.html">Home Page</a><br>
-        <a href="detalhecurso.html">Detalhe de Curso</a><br>
-        <a href="listacursos.html">Lista de Cursos</a><br>
-        <a href="disciplina.html">Disciplina</a>
+        <nav id="menu">
+                    <ul>
+                        <li><a href="">Home Page</a></li>
+                        <li><a href="listacursos.html">Lista de Cursos</a></li>
+                        <li><a href="detalhecurso.html">Detalhe de Curso</a></li>
+                        <li><a href="disciplina.html">Disciplina</a></li>
+                        <li><a href="noticias.html">Notícias</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>
+
+                    <div class="corpo">
+                        Conteúdo
+                    </div>
+            </nav>
     </body>
 </html>
