--- a/listacursos.html
+++ b/listacursos.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Lista Curso</title>
+        <link rel="stylesheet" type="text/css" href="padrao.css">
     </head>
 
     <body>
