--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Home Page</title>
-s
+
         <link rel="stylesheet" type="text/css" href="padrao.css">
+        <link rel="stylesheet" type="text/css" href="index.css">
 
         <img class="logo" src="images/logo-new.png">
     </head>
@@ -21,9 +22,13 @@ s
                         <li><a href="#">Contato</a></li>
                     </ul>
 
-                    <div class="corpo">
-                        Conteúdo
-                    </div>
+                    <div id="principal">
+                            <!-- <div id="esquerda"></div> -->
+                            <div id="conteudo-2">
+                                <div id="corpo"></div>
+                                <div id="direita"><a href="https://account.impacta.edu.br/aluno/indique_um_amigo.php"><img src="images/banner250x300-aluno-online.jpg"></a></div>
+                            </div>
+                        </div>
                 </nav>
 
         <!--    
