--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
                     <div id="principal">
                             <!-- <div id="esquerda"></div> -->
                             <div id="conteudo-2">
-                                <div id="corpo"></div>
-                                <div id="direita"><a href="https://account.impacta.edu.br/aluno/indique_um_amigo.php"><img src="images/banner250x300-aluno-online.jpg"></a></div>
+                                    <div id="corpo"> 
+                                        <h1>Mural de Recados</h1> 
+                                            <div class="recados"> 
+                                                <h3>Aviso1</h3>
+                                                <p>saaskhb</p>
+                                            </div>
+                                    </div>
+                                <div id="direita">
+                                    <a href="https://account.impacta.edu.br/aluno/indique_um_amigo.php"><img src="images/banner250x300-aluno-online.jpg"></a>
+                                </div>
                             </div>
                         </div>
                 </nav>
@@ -36,7 +44,7 @@
         <a href="detalhecurso.html">Detalhe de Curso</a><br>
         <a href="disciplina.html">Disciplina</a><br>
         <a href="noticias.html">Notícias</a>
-    -->
+        -->
     </body>
 
     <footer>
