--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                                     <div id="corpo"> 
                                         <h1>Mural de Recados</h1> 
                                             <div class="recados"> 
-                                                <h3>Aviso1</h3>
-                                                <p>saaskhb</p>
+                                                <h3>Manual estudante da SPTrans</h3>
+                                                <p>Prezados...</p>
                                             </div>
                                     </div>
                                 <div id="direita">
