--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
         <link rel="stylesheet" type="text/css" href="padrao.css">
         <link rel="stylesheet" type="text/css" href="index.css">
 
-        <img class="logo" src="images/logo-new.png">
+        
     </head>
 
     <body>
+        <div class="header">
+        <img class="logo" src="images/logo-new.png">
             <nav id="menu">
                     <ul>
                         <li><a href="">Home Page</a></li>
@@ -21,7 +23,9 @@
                         <li><a href="noticias.html">Notícias</a></li>
                         <li><a href="#">Contato</a></li>
                     </ul>
-
+                </nav>
+                </div>
+                
                     <div id="principal">
                             <!-- <div id="esquerda"></div> -->
                             <div id="conteudo-2">
@@ -37,7 +41,6 @@
                                 </div>
                             </div>
                         </div>
-                </nav>
 
         <!--    
         <a href="listacursos.html">Lista de Cursos</a><br>
