--- a/contato.html
+++ b/contato.html
@@ -6,7 +6,7 @@
         <title>Home Page</title>
 
         <link rel="stylesheet" type="text/css" href="padrao.css">
-        <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="stylesheet" type="text/css" href="contato.css">
 
         
     </head>
@@ -30,10 +30,31 @@
                             <!-- <div id="esquerda"></div> -->
                             <div id="conteudo-2">
                                     <div id="corpo"> 
-                                        <h1>Mural de Recados</h1> 
-                                            <div class="recados"> 
-                                                <h3>Manual estudante da SPTrans</h3>
-                                                <p>Prezados...</p>
+                                        <h1>Contato</h1> 
+                                            <div class="contato"> 
+                                                <h3>Fale Conosco</h3>
+                                                <p>SECRETARIA DE GRADUAÇÃO</br></br>
+
+11 5593-5344</br></br>
+
+De segunda a sexta - das 9h às 20h30</br>
+Sábado - das 9h às 12h30</br></br>
+
+COMERCIAL</br></br>
+
+11 3254-8300</br></br>
+
+De segunda a sexta - das 8h às 21h</br>
+Sábado - das 8h às 15h</p><p>SECRETARIA DE PÓS-GRADUAÇÃO</br></br>
+
+11 3254-8346 / 11 3254-8336</br></br>
+
+De segunda a sexta - das 14h às 20h30</br></br>
+Sábado - das 9h às 12h30</br></br>
+
+FINANCEIRO</br>
+
+11 5593-5392</p>
                                             </div>
                                     </div>
                                 <div id="direita">
