--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
         -->
     </body>
 
-    <footer>
+     <footer>
+        <div class="rodaPeImg">
+       	    <a href="https://www.facebook.com/FacImpacta/" ><img  width="25" height="25" src="images/facebook-logotipo_318-49940.jpg"></a>
+            <a href="https://www.instagram.com/impacta.oficial/" ><img  width="25" height="25" src="images/images.jpg"></a>
+            <a href="https://twitter.com/facimpacta"><img  width="25" height="25" src="images/twitter.jpg"></a>
+        </div>
         <a href="https://www.impacta.edu.br/">Faculdade Impacta Tecnologia</a>
     </footer>
 </html>
