--- a/contato.html
+++ b/contato.html
@@ -69,9 +69,19 @@ FINANCEIRO</br>
         <a href="disciplina.html">Disciplina</a><br>
         <a href="noticias.html">Notícias</a>
         -->
+
+        <div class="imgMaps">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.1939938843425!2d-46.6516911856303!3d-23.525524066153594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a36ed390d1b%3A0x774f96e1ad521edb!2sFaculdade%20Impacta!5e0!3m2!1spt-BR!2sbr!4v1569519330336!5m2!1spt-BR!2sbr"
+            width="500" height="200"frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
     </body>
 
     <footer>
+        <div class="rodaPeImg">
+       	    <a href="https://www.facebook.com/FacImpacta/" ><img  width="25" height="25" src="images/facebook-logotipo_318-49940.jpg"></a>
+            <a href="https://www.instagram.com/impacta.oficial/" ><img  width="25" height="25" src="images/images.jpg"></a>
+            <a href="https://twitter.com/facimpacta"><img  width="25" height="25" src="images/twitter.jpg"></a>
+        </div>
         <a href="https://www.impacta.edu.br/">Faculdade Impacta Tecnologia</a>
     </footer>
 </html>
