--- a/listacursos.html
+++ b/listacursos.html
@@ -6,7 +6,7 @@
         <title>Home Page</title>
 
         <link rel="stylesheet" type="text/css" href="padrao.css">
-        <link rel="stylesheet" type="text/css" href="index.css">
+
          <link rel="stylesheet" type="text/css" href="listaCurso.css">
 
         
@@ -86,8 +86,8 @@
                                             <td>ERP & Gestão de Qualidade.</td>
                                         </tr>
                                     </table><br/>
-                                </div>
-                        </div><br/>
+                                </div><br/><br/><br/><br/><br/>
+                        </div>
             </div><br/>
         </div><br/>
 
@@ -103,3 +103,14 @@
         <a href="https://www.impacta.edu.br/">Faculdade Impacta Tecnologia</a>
     </footer>
 </html>
+
+<!-- padrao.css
+    footer {
+    width: 1318px;
+    clear:both;
+    text-align: right;
+    padding: 8px;
+    display: block;
+    background-color: #002d70; 
+    font-size: 14px;
+}-->
