--- a/index.html
+++ b/index.html
@@ -35,6 +35,22 @@
                                                 <h3>Manual estudante da SPTrans</h3>
                                                 <p>Prezados...</p>
                                             </div>
+                                            <div class="recados"> 
+                                                <h3>CI 01 - Liberdade de Consciência e de Crença</h3>
+                                                <p>ASSUNTO: LEI 13.796, de 3 de Janeiro de 2019 (Liberdade de Consciência e de... </p>
+                                            </div>
+                                            <div class="recados"> 
+                                                <h3>Colação de Grau - Junho 2019</h3>
+                                                <p>Prezados alunos,</p>
+                                            </div>
+                                            <div class="recados"> 
+                                                <h3>Achados e Perdidos</h3>
+                                                <p>Todos os objetos e documentos encontrados nas dependências da Faculdade IMPACTA... </p>
+                                            </div>
+                                            <div class="recados"> 
+                                                <h3>MUDANÇA NO WIFI</h3>
+                                                <p>Prezado aluno(a)</p>
+                                            </div>
                                     </div>
                                 <div id="direita">
                                     <a href="https://account.impacta.edu.br/aluno/indique_um_amigo.php"><img src="images/banner250x300-aluno-online.jpg"></a>
