--- a/listacursos.html
+++ b/listacursos.html
@@ -30,12 +30,12 @@
                 <div id="principal">
                            
                     <div id="conteudo-2">
-                        <div class="corpo"> 
+                        <div id="corpo"> 
                             <h1>Cursos de Graduação</h1> 
                                 <div class="boxVerde"> 
                                     <h3>Cursos Ofertados</h3><br/>
 
-                                    <table border='1'> 
+                                    <table> 
                                         <tr>
                                             <td>Curso</td>
                                             <td>Informação</td>
@@ -62,7 +62,7 @@
                                     
                                     <h3>Tecnólogos Ofertados</h3><br/>
 
-                                    <table border='1'> 
+                                    <table> 
                                         <tr>
                                             <td>Curso</td>
                                             <td>Informação</td>
@@ -87,6 +87,9 @@
                                         </tr>
                                     </table><br/>
                                 </div><br/><br/><br/><br/><br/>
+                        </div>
+                        <div id="direita">
+                            <a href="https://account.impacta.edu.br/aluno/indique_um_amigo.php"><img src="images/banner250x300-aluno-online.jpg"></a>
                         </div>
             </div><br/>
         </div><br/>
