--- a/disciplina.html
+++ b/disciplina.html
@@ -3,13 +3,75 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-        <title>Disciplina</title>
+        <title>Home Page</title>
+
+        <link rel="stylesheet" type="text/css" href="padrao.css">
+        <link rel="stylesheet" type="text/css" href="index.css">
+
+        
     </head>
 
     <body>
-        <a href="index.html">Home Page</a><br>
-        <a href="detalhecurso.html">Detalhe de Curso</a><br>
+        <div class="header">
+        <img class="logo" src="images/logo-new.png">
+            <nav id="menu">
+                    <ul>
+                        <li><a href="index.html">Home Page</a></li>
+                        <li><a href="listacursos.html">Lista de Cursos</a></li>
+                        <li><a href="detalhecurso.html">Detalhe de Curso</a></li>
+                        <li><a href="disciplina.html">Disciplina</a></li>
+                        <li><a href="noticias.html">Notícias</a></li>
+                        <li><a href="contato.html">Contato</a></li>
+                    </ul>
+                </nav>
+                </div>
+                
+                    <div id="principal">
+                            <!-- <div id="esquerda"></div> -->
+                            <div id="conteudo-2">
+                                    <div id="corpo"> 
+                                        <h1>Mural de Recados</h1> 
+                                            <div class="recados"> 
+                                                <h3>Manual estudante da SPTrans</h3>
+                                                <p>Prezados...</p>
+                                            </div>
+                                            <div class="recados"> 
+                                                <h3>CI 01 - Liberdade de Consciência e de Crença</h3>
+                                                <p>ASSUNTO: LEI 13.796, de 3 de Janeiro de 2019 (Liberdade de Consciência e de... </p>
+                                            </div>
+                                            <div class="recados"> 
+                                                <h3>Colação de Grau - Junho 2019</h3>
+                                                <p>Prezados alunos,</p>
+                                            </div>
+                                            <div class="recados"> 
+                                                <h3>Achados e Perdidos</h3>
+                                                <p>Todos os objetos e documentos encontrados nas dependências da Faculdade IMPACTA... </p>
+                                            </div>
+                                            <div class="recados"> 
+                                                <h3>MUDANÇA NO WIFI</h3>
+                                                <p>Prezado aluno(a)</p>
+                                            </div>
+                                    </div>
+                                <div id="direita">
+                                    <a href="https://account.impacta.edu.br/aluno/indique_um_amigo.php"><img src="images/banner250x300-aluno-online.jpg"></a>
+                                </div>
+                            </div>
+                        </div>
+
+        <!--    
         <a href="listacursos.html">Lista de Cursos</a><br>
+        <a href="detalhecurso.html">Detalhe de Curso</a><br>
+        <a href="disciplina.html">Disciplina</a><br>
         <a href="noticias.html">Notícias</a>
+        -->
     </body>
+
+     <footer>
+        <div class="rodaPeImg">
+       	    <a href="https://www.facebook.com/FacImpacta/" ><img  width="25" height="25" src="images/facebook-logotipo_318-49940.jpg"></a>
+            <a href="https://www.instagram.com/impacta.oficial/" ><img  width="25" height="25" src="images/images.jpg"></a>
+            <a href="https://twitter.com/facimpacta"><img  width="25" height="25" src="images/twitter.jpg"></a>
+        </div>
+        <a href="https://www.impacta.edu.br/">Faculdade Impacta Tecnologia</a>
+    </footer>
 </html>
