--- a/listacursos.html
+++ b/listacursos.html
@@ -6,8 +6,7 @@
         <title>Home Page</title>
 
         <link rel="stylesheet" type="text/css" href="padrao.css">
-
-         <link rel="stylesheet" type="text/css" href="listaCurso.css">
+        <link rel="stylesheet" type="text/css" href="listaCurso.css">
 
         
     </head>
@@ -89,8 +88,12 @@
                                 </div><br/><br/><br/><br/><br/>
                         </div>
                         <div id="direita">
-                            <a href="https://account.impacta.edu.br/aluno/indique_um_amigo.php"><img src="images/banner250x300-aluno-online.jpg"></a>
+                            <a href="https://account.impacta.edu.br/aluno/indique_um_amigo.php"><img src=""></a>
                         </div>
+                        <div id="direita">
+                                <a href="https://account.impacta.edu.br/aluno/indique_um_amigo.php"><img src=""></a>
+                        </div>
+                        
             </div><br/>
         </div><br/>
 
@@ -106,14 +109,3 @@
         <a href="https://www.impacta.edu.br/">Faculdade Impacta Tecnologia</a>
     </footer>
 </html>
-
-<!-- padrao.css
-    footer {
-    width: 1318px;
-    clear:both;
-    text-align: right;
-    padding: 8px;
-    display: block;
-    background-color: #002d70; 
-    font-size: 14px;
-}-->
