Disciplina e Detalhe Curso

--- a/disciplina.html
+++ b/disciplina.html
@@ -6,7 +6,7 @@
         <title>Home Page</title>
 
         <link rel="stylesheet" type="text/css" href="padrao.css">
-        <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="stylesheet" type="text/css" href="disciplina.css">
 
         
     </head>
@@ -30,26 +30,10 @@
                             <!-- <div id="esquerda"></div> -->
                             <div id="conteudo-2">
                                     <div id="corpo"> 
-                                        <h1>Mural de Recados</h1> 
-                                            <div class="recados"> 
-                                                <h3>Manual estudante da SPTrans</h3>
-                                                <p>Prezados...</p>
-                                            </div>
-                                            <div class="recados"> 
-                                                <h3>CI 01 - Liberdade de Consciência e de Crença</h3>
-                                                <p>ASSUNTO: LEI 13.796, de 3 de Janeiro de 2019 (Liberdade de Consciência e de... </p>
-                                            </div>
-                                            <div class="recados"> 
-                                                <h3>Colação de Grau - Junho 2019</h3>
-                                                <p>Prezados alunos,</p>
-                                            </div>
-                                            <div class="recados"> 
-                                                <h3>Achados e Perdidos</h3>
-                                                <p>Todos os objetos e documentos encontrados nas dependências da Faculdade IMPACTA... </p>
-                                            </div>
-                                            <div class="recados"> 
-                                                <h3>MUDANÇA NO WIFI</h3>
-                                                <p>Prezado aluno(a)</p>
+                                        <h1>Desenvolvimento de Sistemas</h1> 
+                                            <div class="disciplina"> 
+                                            <img class="destcurso" src="images/banco-de-dados-1555543002.png">
+                                                <p>Conceitos e fundamentos: Internet, Intranet e Extranet. Arquitetura Cliente-Servidor. <br/><br/>Desenvolvimento de aplicações WEB Padrões Web. HTML (HyperText Markup Language) e CSS (Cascading Style Sheets). Sintaxe, comandos JavaScript e integração com HTML. Noções de NodeJS. Python e Framework de Desenvolvimento.<br/><br/>Arquitetura Model-View-Controller; a camada de acesso a banco de dados; Padrão de endereçamento http; aspetos de segurança, componentização JQuery + AJAX.</p>
                                             </div>
                                     </div>
                                 <div id="direita">
