--- a/noticias.html
+++ b/noticias.html
@@ -56,9 +56,14 @@
                                         </div><br/>
                                     </div>
 
-                                <div id="direita">
-                                    <a href="https://account.impacta.edu.br/aluno/indique_um_amigo.php"><img src="images/banner250x300-aluno-online.jpg"></a>
+                                <div class="BoxImg">
+                                    <a href="https://account.impacta.edu.br/aluno/indique_um_amigo.php"><img src="images/financeiro.png"></a>
                                 </div>
+
+                                <div class="BoxImg">
+                                        <a href="https://www.impacta.edu.br/blog/materiais-gratuitos/"><img src="images/banner.materias.png"></a>
+                                </div>    
+
                             </div>
                         </div>
     </body>
