--- a/noticias.html
+++ b/noticias.html
@@ -57,11 +57,11 @@
                                     </div>
 
                                 <div class="BoxImg">
-                                    <a href="https://account.impacta.edu.br/aluno/indique_um_amigo.php"><img src="images/financeiro.png"></a>
+                                    <a href="https://www.impacta.edu.br/blog/e-book-guia-completo-sobre-pos-graduacao-como-escolher-o-curso-ideal/"><img src="images/pos.jpg"></a>
                                 </div>
 
                                 <div class="BoxImg">
-                                        <a href="https://www.impacta.edu.br/blog/materiais-gratuitos/"><img src="images/banner.materias.png"></a>
+                                        <a href="https://www.impacta.edu.br/blog/materiais-gratuitos/"><img src="images/financeiro.png"></a>
                                 </div>    
 
                             </div>
