--- a/detalhecurso.html
+++ b/detalhecurso.html
@@ -43,6 +43,7 @@
                                                             
                                                             Entre as funções oferecidas no mercado, estão gerente de sistemas de banco de dados, desenvolvedor de projetos e consultor de banco de dados, analista de Business Intelligence, analista de dados, analista de Big Data, gerente de Analytics, engenheiro de dados, engenheiro de Big Data, gerente de segurança de dados, administrador de banco de dados e analista de sistemas de apoio à decisão. Essas são as carreiras com maior remuneração do mercado.<br/><br/>
                                                 
+                                                            <h3>2º Semestre</h3>
                                                             <ul><li>Ambiente de Desenvolvimento e Operação -DevOps: 80 horas
                                                             </li><li>Análise Exploratória de Dados: 80 horas
                                                             </li><li>Desenvolvimento de Sistemas: 80 horas
